# Metternich

./: .gitignore  CMakeLists.txt  dl_de_by_2.0.txt  readme.md  vcpkg.json
data/: defines.txt  notes.txt
data/arcane_schools/: arcane_schools.txt
data/bloodlines/: aesir_bloodlines.txt  mythic_bloodlines.txt  olympian_bloodlines.txt  protogenoi_bloodlines.txt  saintly_bloodlines.txt  vanir_bloodlines.txt
data/building_classes/: alchemists_shop.txt  aqueduct.txt  arena.txt  arsenal.txt  artifact.txt  bank.txt  bardic_college.txt  barracks.txt  bowyer.txt  brass_foundry.txt  brewery.txt  bronze_foundry.txt  bureau.txt  carpenters_shop.txt  casters_tower.txt  cigar_factory.txt  clothing_factory.txt  coffee_house.txt  courthouse.txt  depots.txt  distillery.txt  dock.txt  farm.txt  fertilizer_factory.txt  food_processing_center.txt  fortification.txt  fur_factory.txt  fur_trading_post.txt  furniture_factory.txt  garrison.txt  glassworks.txt  granary.txt  graveyard.txt  guildhall.txt  hatchery.txt  herbalist.txt  iron_smelter.txt  jail.txt  keep.txt  lead_smelter.txt  (+38 more)
data/building_slot_types/: aqueduct.txt  arena.txt  artifact.txt  bank.txt  bardic_college.txt  barracks.txt  brewery.txt  bureau.txt  carpenters_shop.txt  casters_tower.txt  coffee_house.txt  courthouse.txt  depot.txt  dock.txt  factories.txt  farm.txt  fort.txt  fortification.txt  garrison.txt  granary.txt  graveyard.txt  guildhall.txt  hatchery.txt  herbalist.txt  jail.txt  keep.txt  laboratory.txt  library.txt  lighthouse.txt  mansion.txt  market.txt  military_academy.txt  mill.txt  mine.txt  monument.txt  observatory.txt  orphanage.txt  pier.txt  post_office.txt  printing_press.txt  (+16 more)
data/building_types/: alchemists_shop.txt  aqueduct.txt  arena.txt  arsenal.txt  artifact.txt  bank.txt  bardic_college.txt  barracks.txt  bowyer.txt  brass_foundry.txt  brewery.txt  bronze_foundry.txt  bureau.txt  carpenters_shop.txt  casters_tower.txt  cigar_factory.txt  clothing_factory.txt  coffee_house.txt  courthouse.txt  depot.txt  distillery.txt  dock.txt  farm.txt  fertilizer_factory.txt  food_processing_center.txt  fort.txt  fortification.txt  fur_factory.txt  fur_trading_post.txt  furniture_factory.txt  garrison.txt  glassworks.txt  granary.txt  graveyard.txt  guildhall.txt  hatchery.txt  herbalist.txt  iron_mine.txt  iron_smelter.txt  jail.txt  (+42 more)
data/celestial_body_types/: gas_giant.txt  star.txt  worlds.txt
data/character_attributes/: attributes.txt  charisma.txt  constitution.txt  dexterity.txt  intelligence.txt  personality.txt  strength.txt  wisdom.txt
data/character_classes/: admiral.txt  architect.txt  aristocrat.txt  artist.txt  banker.txt  bard.txt  cleric.txt  conquistador.txt  diplomat.txt  druid.txt  engineer.txt  farmer.txt  general.txt  high_judge.txt  inquisitor.txt  mage.txt  merchant.txt  military_engineer.txt  natural_scientist.txt  navigator.txt  paladin.txt  philosopher.txt  pioneer.txt  privateer.txt  ranger.txt  rogue.txt  spymaster.txt  statesman.txt  theologian.txt  treasurer.txt  warrior.txt
data/character_types/: banker.txt  cleric.txt  inquisitor.txt  mage.txt  master_of_mint.txt  navigator.txt  philosopher.txt  pioneer.txt  ranger.txt  theologian.txt
data/characters/: americans.txt  angevins.txt  anglo_saxons.txt  apache.txt  aragonese.txt  archons.txt  assyrians.txt  athenians.txt  auerspergs.txt  austrians.txt  aztecs.txt  babenbergs.txt  basques.txt  bavarians.txt  bohemians.txt  bonapartes.txt  bourbon_orleans.txt  bourbons.txt  brazilians.txt  burgundians.txt  capets.txt  carthaginians.txt  castillians.txt  catalans.txt  chinese.txt  czechs.txt  danish.txt  dutch.txt  english.txt  flemish.txt  franconians.txt  franks.txt  french.txt  furstenbergs.txt  germans.txt  greeks.txt  habsburgs.txt  hohenstaufen.txt  hohenstaufens.txt  hungarians.txt  (+57 more)
data/civilian_unit_classes/: builder.txt  developer.txt  driller.txt  engineer.txt  explorer.txt  farmer.txt  fisherman.txt  forester.txt  merchant.txt  miner.txt  office_civilian_units.txt  pioneer.txt  prospector.txt  rancher.txt  spy.txt
data/civilian_unit_types/: builder.txt  developer.txt  driller.txt  engineer.txt  explorer.txt  farmer.txt  fisherman.txt  forester.txt  merchant.txt  miner.txt  office_civilian_units.txt  pioneer.txt  prospector.txt  rancher.txt  spy.txt
data/civilian_units/: austrian_civilians.txt  british_civilians.txt  french_civilians.txt  italian_civilians.txt  ottoman_civilians.txt  portuguese_civilians.txt  prussian_civilians.txt  russian_civilians.txt  spanish_civilians.txt
data/commodities/: amber.txt  amenities.txt  armament.txt  arquebuses.txt  brass.txt  brass_lamps.txt  bronze.txt  canned_food.txt  cannons.txt  cattle.txt  cigars.txt  cinnabar.txt  clothing.txt  coal.txt  coffee.txt  construction.txt  copper.txt  cotton.txt  culture.txt  diamonds.txt  dye.txt  fabric.txt  fertilizer.txt  fish.txt  fruit.txt  fuel.txt  fur_hats.txt  furniture.txt  furs.txt  gems.txt  glass.txt  gold.txt  grain.txt  horses.txt  housing.txt  (+41 more)
graphics/: credits.txt
interface/: AdvisorsInfoPanel.qml  AdvisorsView.qml  BalanceBookView.qml  BaseTreePortraitButton.qml  BuildingPortraitGrid.qml  ButtonBase.qml  CharacterPortraitButton.qml  CharacterPortraitGridItem.qml  CivilianUnitInfoArea.qml  CombatInfoPanel.qml  CombatTileMap.qml  CombatTileView.qml  CombatView.qml  CourtInfoPanel.qml  CourtView.qml  CultureChart.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomIconImage.qml  CustomMapView.qml  CustomSlider.qml  CustomTooltip.qml  DiplomacyBottomPanel.qml  DiplomaticMap.qml  DiplomaticView.qml  DomainHistoryView.qml  ExpandBuildingButton.qml  FamilyTreeInfoPanel.qml  FamilyTreeTreeView.qml  FamilyTreeView.qml  FeatureImage.qml  FeatureRow.qml  FlagButton.qml  FlagImage.qml  GameOverView.qml  GeoProvinceMap.qml  GovernmentView.qml  IconButton.qml  IconButtonBase.qml  IdeaSlotGrid.qml  (+67 more)
maps/: credits.txt
music/: credits.txt
shaders/: opacitymask.frag  xbrz.frag  xbrz.glsl
sounds/: credits.txt
src/: engine_interface.cpp  engine_interface.h  main.cpp  metternich.h  pch.h  trait_base.cpp  trait_base.h
test/: main.cpp
(+7140 files in other folders)
